objects/EUR_CRM_ObjPromo_Account_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <label>Account (EU)</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>O_P_Account_Mappings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Do_Not_Reactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Reactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Evaluation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bypass flag for Mobile app, so it doesn&apos;t need to create Visit Actions against that Promotion for that Account</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ObjPromo__c</fullName>
        <label>Objectives / Promotions</label>
        <referenceTo>EUR_CRM_ObjPromo__c</referenceTo>
        <relationshipName>EUR_CRM_O_P_Account_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>O/P - Account Mapping (EU)</label>
    <listViews>
        <fullName>EUR_DK_O_P_Account_Mapping</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_ObjPromo__c</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Is_Active__c</columns>
        <columns>EUR_CRM_Evaluation_Required__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Account_Mapping__c.EUR_DK_OP_Account_Mapping</value>
        </filters>
        <label>EUR DK O/P - Account Mapping</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_FI_O_P_Account_Mapping</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_ObjPromo__c</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Is_Active__c</columns>
        <columns>EUR_CRM_Evaluation_Required__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Account_Mapping__c.EUR_FI_O_P_Account_Mapping</value>
        </filters>
        <label>EUR FI O/P - Account Mapping</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_PT_All_OP_Account_Mapping_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_ObjPromo__c</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Is_Active__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Account_Mapping__c.EUR_PT_Account_Mapping</value>
        </filters>
        <label>EUR PT All OP - Account Mapping View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_RU_O_P_Account_Mapping</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_ObjPromo__c</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Is_Active__c</columns>
        <columns>EUR_CRM_Evaluation_Required__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Account_Mapping__c.EUR_RU_O_P_Account_Mapping</value>
        </filters>
        <label>EUR RU O/P - Account Mapping</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RU_Active_O_P_Account_Mappings</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Is_Active__c</columns>
        <columns>EUR_CRM_Is_Published__c</columns>
        <columns>EUR_CRM_Evaluation_Required__c</columns>
        <columns>EUR_CRM_ObjPromo__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Account_Mapping__c.EUR_RU_O_P_Account_Mapping</value>
        </filters>
        <filters>
            <field>EUR_CRM_Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>RU Active O/P Account Mappings</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>OP-{0000000000}</displayFormat>
        <label>O/P - Account Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>O/P - Account Mapping (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_O_P_Account_Mapping</fullName>
        <active>true</active>
        <label>BE O/P - Account Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_DE_O_P_Account_Mapping</fullName>
        <active>true</active>
        <label>DE O/P - Account Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_OP_Account_Mapping</fullName>
        <active>true</active>
        <label>DK O/P - Account Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_O_P_Account_Mapping</fullName>
        <active>true</active>
        <label>FI O/P - Account Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Account_Mapping</fullName>
        <active>true</active>
        <label>EUR PT - Account Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_O_P_Account_Mapping</fullName>
        <active>true</active>
        <label>RU O/P - Account Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_OP_Account_Mapping</fullName>
        <active>true</active>
        <label>ZA O/P - Account Mapping</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>